# DY_shears

./: Makefile  README.md
Bonzais/: EventTree.h  Makefile  Pruner.h  README.md  ShearsTChain.cc  ShearsTChain.h  TagProbePruner.cc  VJetPruner.cc  ZZ2l2vPruner.cc  branch_list.txt  branch_list_Ele.txt  branch_list_MnE.txt  branch_list_Mu.txt  pruner.cc  pruners.txt
DYJets/: .clang-format  CMakeLists.txt  Doxyfile  LetterFractions.txt  README.md  auto-hadd.sh  checkFinJobs.sh  checkFinJobs_EMu.sh  dyjets-binnings.yml  dyjets.yml  dyjets16-ee.yml  dyjets16-emu.yml  dyjets16.yml  dyjets17.yml  example.cfg  higgs-binnings.yml  higgs.yml  higgs16.yml  higgs17.yml  histList.txt  joblist  joblist_all  lcg-env.sh  unfolding.cfg  vjets.cfg  vjets.cfg.double  vjets.cfg.single  vjets_EMu.cfg
DYJets/Catalogs/2016preAPV/: Catalog19UL16_postAPV_DYJetsToLL.txt  Catalog19UL16_preAPV_DYJetsToLL.txt  Catalog2016_bonzai_DY_TauTau.txt  Catalog2016_bonzai_MC.txt  Catalog2016_bonzai_ST-s-channel.txt  Catalog2016_bonzai_ST-t-channel.txt  Catalog2016_bonzai_ST-tW.txt  Catalog2016_bonzai_STbar-tW.txt  Catalog2016_bonzai_WToLNu.txt  Catalog2016_bonzai_WWTo2L2Nu.txt  Catalog2016_bonzai_WZ.txt  Catalog2016_bonzai_ZZ.txt  Catalog2016_bonzai_data_withoutJSON.txt  Catalog2016_bonzai_ttbar.txt
DYJets/Catalogs/2016preLegacy/: Catalog2016_bonzai_MC.txt  Catalog2016_bonzai_data_DoubleEG.txt  Catalog2016_bonzai_data_SMu.txt  Catalog2016_bonzai_data_SPhoton.txt
DYJets/Catalogs/2018/: Catalog2018_bonzai_MC.txt  Catalog2018_bonzai_ST-s-channel.txt  Catalog2018_bonzai_ST-t-channel.txt  Catalog2018_bonzai_ST-tW.txt  Catalog2018_bonzai_STbar-tW.txt  Catalog2018_bonzai_SingleMuon_data.txt  Catalog2018_bonzai_SingleMuon_data_withoutJSON.txt  Catalog2018_bonzai_TauTau.txt  Catalog2018_bonzai_WToLNu.txt  Catalog2018_bonzai_WWTo2L2Nu.txt  Catalog2018_bonzai_WZ.txt  Catalog2018_bonzai_ZZ.txt  Catalog2018_bonzai_data.txt  Catalog2018_bonzai_data_withoutJSON.txt  Catalog2018_bonzai_ttbar.txt
DYJets/Catalogs/oldNano/: Catalog2016_MC.txt  Catalog2016_data.txt  Catalog2016_nanoAOD_ttbar.txt
DYJets/Documentation/: Architecture.md  CodingStyle.md  Introduction.md  Options.md
DYJets/EfficiencyTables/: Eff_SF_ID_BF_12_14_2016_LooseID.txt  Eff_SF_ID_BF_12_14_2016_MediumID.txt  Eff_SF_ID_BF_6_16_2017.txt  Eff_SF_ID_GH_6_16_2017.txt  Eff_SF_ISO_BF_6_16_2017.txt  Eff_SF_ISO_GH_6_16_2017.txt  Eff_SF_SingleMuTrigger_BF_6_16_2017.txt  Eff_SF_SingleMuTrigger_GH_6_16_2017.txt  Eff_SF_Tracking_BF_08_07_2017.txt  Eff_SF_Tracking_Full_08_07_2017.txt  Eff_SF_Tracking_GH_08_07_2017.txt  EfficienciesAndSF_ALL_Mu17Mu8OR.txt  EfficienciesAndSF_All_Mutracking.txt  EfficienciesAndSF_BCDEF_Mu17Mu8OR.txt  EfficienciesAndSF_BCDEF_Mu17Mu8OR_dZ.txt  EfficienciesAndSF_GH_Mu17Mu8OR.txt  EfficienciesAndSF_GH_Mu17Mu8OR_dZ.txt  EfficienciesAndSF_ID_2016.txt  EfficienciesAndSF_ISO_2016.txt  Efficiencies_muon_generalTracks_Z_Run2016_UL_HIPM_ID_MediumID.txt  Efficiencies_muon_generalTracks_Z_Run2016_UL_HIPM_ISO_TightRelIso_DEN_MediumID.txt  Efficiency_HLTEle23Ele12CaloIdLTrackIdLIsoVLDZ_Ratio.txt  Electron_Id_Loose_SF_2016.txt  Electron_Id_TightCut_SF_2016.txt  Electron_Reco_2016_SF.txt  Electron_Reco_2016_SF_converted_new.txt  Electron_trigger_seoul.txt  Electron_trigger_seoul_leg1.txt  HLTEle23Ele12CaloIdLTrackIdLIsoVLDZ_SF_LooseID.txt  HLTEle23Ele12CaloIdLTrackIdLIsoVLDZ_SF_TightID.txt  JECScaleConverter.py  SMP_17_010_BCDEF_MediumID.txt  SMP_17_010_BCDEF_MediumID_electrons.txt  SMP_17_010_BCDEF_MediumID_fromDylanGit.txt  SMP_17_010_GH_MediumID.txt  SMP_17_010_GH_MediumID_electrons.txt  SMP_17_010_GH_MediumID_fromDylanGit.txt  ScaleFactors_ISO_03_29_2017.txt  ScaleFactors_TightID_03_29_2017.txt  ScaleFactors_TriggerMu17Mu8DZMu24_MediumID_RunGH.txt  (+38 more)
DYJets/Includes/: ArgParser.h  BLUEMeth.h  Combination.h  Config.h  ConfigVJets.h  GenH1D.h  HistoSetZJets.h  IntegralCheck.h  JetCorrectionUncertainty.h  JetCorrectorParameters.h  JetResolution.h  JetResolutionObject.h  PlotSettings.h  RecoComparison.h  ResultTables.h  SectionedConfig.h  SimpleJetCorrectionUncertainty.h  TextTools.h  Uncertainties.h  UnfoldingZJets.h  Utilities.h  ZJets_newformat.h  ansi_seq.h  boson_jets_analyzer.h  btagger.h  catalog.h  chains.h  cmake_config.h.in  compare_builder_base.h  comparison_entry.h  dyjets_analyzer.h  electrons.h  event_counter.h  fileNamesZJets.h  fixYscale.h  functions.h  genleps.h  getFilesAndHistogramsZJets.h  higgs_analyzer.h  histo_set.h  (+26 more)
DYJets/Main/: dyjets-compare.cc  dyjets-job-list.cc  dyjets-loop.cc  dyjets-matrix.cc  dyjets-sample-weights.cc  higgs-compare.cc  higgs-job-list.cc  higgs-loop.cc  plotCrossSections.cc  runCombination.cc  runIntegralCheck.cc  runRecoComparison.cc  runUnfoldingZJets.cc  runZJets_newformat.cc  send-to-cluster  task-check
DYJets/RooUnfold/: GNUmakefile
DYJets/RooUnfold/src/: RooUnfold.cxx  RooUnfoldBayes.cxx  RooUnfoldBinByBin.cxx  RooUnfoldBinByBin.h  RooUnfoldResponse.cxx  RooUnfoldSvd.cxx  RooUnfoldSvd.h
DYJets/Sources/: ArgParser.cc  BLUEMeth.cc  Combination.cc  Config.cc  ConfigVJets.cc  HistoSetZJets.cc  JetCorrectionUncertainty.cc  JetCorrectorParameters.cc  JetResolution.cc  JetResolutionObject.cc  PlotSettings.cc  RecoComparison.cc  ResultTables.cc  SectionedConfig.cc  SimpleJetCorrectionUncertainty.cc  TextTools.cc  Uncertainties.cc  UnfoldingZJets.cc  ZJets_newformat.cc  ZJets_newformat_noTTmass.cc  boson_jets_analyzer.cc  btagger.cc  catalog.cc  chains.cc  compare_builder_base.cc  comparison_entry.cc  dyjets_analyzer.cc  electrons.cc  event_counter.cc  fixYscale.cc  functions.cc  genleps.cc  getFilesAndHistogramsZJets.cc  higgs_analyzer.cc  histo_set.cc  histo_set2D.cc  jets.cc  job.cc  logging.cc  mc_group.cc  (+21 more)
DYJets/crab.d/: README.md  crabConfig.py  crabConfigDY.py  job_crab.sh  job_crabDY.sh
DYJets/crab.d/0000/: postProcessing
Rivet/: README.md  rivetSetup.sh
ntuple_production/: README.md  cmslog-inputfiles  donothing_cfg.py  dumpPSetpkl  get_crab_status  get_ds_run_range  getlumi  grow_baobabs  grow_baobabs_cfg.py  grow_bonzai_task_list_example.txt  grow_bonzais  job_bonzai_prod.sh  mgrow_baobabs  (+6 more)
(+27 files in other folders)
